fixed alignment of project dashboard

--- a/src/assets/sass/layout/_content.scss
+++ b/src/assets/sass/layout/_content.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     min-height: 100vh;
     justify-content: space-between;
-    padding: 7rem 2rem 2rem 0rem;
+    padding: 7rem 2rem 2rem 2rem;
     transition: margin-left $transitionDuration;
 }
 
